# auto-bayesian

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  NOTICE  README.md  pyproject.toml
.cla-signatures/v1/: cla.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dep-scan.yml  license-check.yml  pattern-check.yml  release.yml
examples/: lead_scoring.toml
examples/data/: customers.csv  interactions.csv  leads.csv
examples/notebooks/: olist_network.md  olist_relational_quickstart.ipynb
src/auto_bayesian/: __init__.py  __main__.py  automl.py  cli.py  engine_pgmpy.py  explain.py  materialize.py  metrics.py  model.py  preprocess.py  schema.py
tests/: test_data_cleaning.py  test_explain.py  test_inference_dedup.py  test_library_api.py  test_materialize.py  test_metrics.py  test_new_features.py  test_pipeline.py  test_schema.py  test_threshold_and_binning.py
