[project]
name = "auto-bayesian"
version = "0.1.0"
description = "Config-driven, interpretable Bayesian network training for relational tabular data."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Santander AI Lab" },
]
keywords = [
    "bayesian-network",
    "automl",
    "interpretable-ml",
    "explainable-ai",
    "tabular-data",
    "pgmpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pgmpy>=1.0.0,<1.2.0",
    "pyarrow>=18.0.0",
]

[project.optional-dependencies]
examples = [
    "kagglehub>=0.3.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.29.0",
    "truststore>=0.10.0",
]
dev = [
    "black>=24.0.0",
    "iprogress>=0.4",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.2",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/SantanderAI/auto-bayesian"
Repository = "https://github.com/SantanderAI/auto-bayesian"
Documentation = "https://github.com/SantanderAI/auto-bayesian/blob/main/DOCUMENTATION.md"
Issues = "https://github.com/SantanderAI/auto-bayesian/issues"

[project.scripts]
auto-bayesian = "auto_bayesian.cli:main"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "iprogress>=0.4",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.2",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_bayesian"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
no_implicit_optional = true
